--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,17 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root" style="font-family:'Roboto Mono' , monospace"></div>
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('./serviceworker.js')
+        // .then(reg => console.log('Success: ', reg.scope))
+        // .then(reg => console.log('Success'))
+        // .catch(err => console.log('Failure: ', err))
+        // .catch(err => console.log('Failed'))
+      })
+    }
+  </script>
 </body>
 
 </html>
