--- a/public/offline.html
+++ b/public/offline.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="../src/style/offline.css"> -->
-    <title>Al Quran</title>
+    <title>Web Badge</title>
     <style type="text/css">
         html {
             height: 100%;
