--- a/public/offline.html
+++ b/public/offline.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="../src/style/offline.css"> -->
-    <title>Web Badge</title>
+    <title>Shield Icons</title>
     <style type="text/css">
         html {
             height: 100%;
@@ -41,7 +41,7 @@
 <body>
     <div class="container">
         <h2 class="container-heading">
-            <span>Please go online to use Web Badge</span>
+            <span>Please go online to use Shield Icons</span>
         </h2>
     </div>
 </body>
